# treedx

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.profiler  PLAN  README.md  compose.prod.yaml  compose.yaml  docker-entrypoint.sh  docker-profiler-entrypoint.sh  env.yaml  repomix.config.json  sdk-plan.md  treeseed.package.yaml
.github/workflows/: deploy-docs.yml  dev-image.yml  elixir-sdk-release-gate.yml  publish.yml  python-sdk-release-gate.yml  release-gate.yml  rust-sdk-release-gate.yml  sdk-spec-release-gate.yml  ts-sdk-release-gate.yml
apps/api/: mix.exs
apps/api/native/treedb_native/: Cargo.toml
apps/api/native/treedb_native/src/: lib.rs
apps/api/native/treedx_native/: Cargo.toml
apps/api/native/treedx_native/src/: catalog_nifs.rs  control_nifs.rs  lib.rs  repository_nifs.rs  support.rs
crates/treedb_git/: Cargo.toml
crates/treedb_graph/: Cargo.toml
crates/treedb_store/: Cargo.toml
crates/treedb_store/src/: audit.rs  catalog.rs  ids.rs  lib.rs  log.rs  migration.rs  policy.rs  recovery.rs  snapshots.rs  types.rs  workspace.rs  workspace_files.rs
crates/treedb_store/tests/: audit_batch_tests.rs  backup_tests.rs  catalog_tests.rs  policy_tests.rs  recovery_tests.rs  restore_tests.rs  security_storage_tests.rs  snapshot_tests.rs  storage_migration_tests.rs  workspace_blob_tests.rs
crates/treedx_git/: Cargo.toml
crates/treedx_git/src/: blob.rs  commit.rs  diff.rs  lib.rs  repo.rs  sync.rs  tree.rs  types.rs
crates/treedx_git/src/error/: mod.rs
crates/treedx_git/src/remotes/: mod.rs
crates/treedx_git/tests/: push_tests.rs  repo_tests.rs  security_remote_tests.rs
crates/treedx_graph/: Cargo.toml
crates/treedx_graph/src/: dsl.rs  error.rs  lib.rs  rank.rs  segment.rs
crates/treedx_graph/src/context/: mod.rs
crates/treedx_graph/src/segment/: mod.rs
crates/treedx_graph/src/types/: mod.rs
crates/treedx_graph/tests/: graph_tests.rs
crates/treedx_store/: Cargo.toml
docs/: astro.config.ts  package.json  treeseed.site.yaml
docs/api/: compatibility-notes.md  openapi-gap-list.md  openapi.json  openapi.yaml
docs/architecture/: api-contract-versioning.md  blob-artifact-lifecycle.md  capability-matrix.md  exec-sandboxing.md  exec-worker-boundary.md  federated-query-execution.md  git-remote-workflows.md  graph-search-context-productionization.md  native-storage-hardening.md  observability-operations.md  performance-profiler.md  production-risk-inventory.md  remote-credential-boundary.md  sdk-integration.md  security-model.md  storage-migrations-restore.md  treedb-sdk-spec-implementation-plan.md  treedx-sdk-spec-implementation-plan.md
docs/research/: auth-capability-audit-design.md  end-to-end-contract.md  environment.md  phase10-end-to-end-contract.md  sdk-baseline-verification.md  sdk-final-verification.md  sdk-graph-contract.md  sdk-integration-design.md  sdk-interface-map.md  sdk-query-contract.md  snapshot-mirror-migration-design.md
docs/runbooks/: api-compatibility.md  auth-jwks.md  backup-restore.md  blob-artifacts.md  configuration.md  deploy.md  federated-query.md  (+13 more)
profiles/: compose.profile.admin.yaml  compose.profile.binary.yaml  compose.profile.connected-library.yaml  compose.profile.dev-api.yaml  compose.profile.federation-performance.yaml  compose.profile.federation-soak.yaml  compose.profile.federation.yaml  compose.profile.fixed.yaml  compose.profile.graph.yaml  compose.profile.mirror-federation.yaml  compose.profile.performance.yaml  compose.profile.portfolio.yaml  compose.profile.read-heavy.yaml  compose.profile.smoke.yaml  compose.profile.soak.yaml  compose.profile.write-heavy.yaml  compose.profile.yaml
scripts/: bump-release-version.ts  check-file-lengths.sh  check-sdk-docs.sh  federation-live-check.sh  mvp-smoke.sh  openapi-check.sh  phase10-smoke.sh  profile-compose.sh  profile-treedb-smoke.sh  profile-treedb.sh  profile-treedx-smoke.sh  profile-treedx.sh  release-gate.sh  release-tag.sh  sdk-live-contract.sh  security-check.sh  storage-recovery-check.sh  test-all.sh  test-sdk-live-conformance.sh  test-sdk-packages.sh  test-stage2-fast.sh  test-stage3-fast.sh  test-stage4-fast.sh  test-treedb-fast.sh  test-treedx-fast.sh  test-treedx-full.sh
(+601 files in other folders)
