[workspace]
resolver = "2"
members = [
  "crates/treedb_store",
  "crates/treedb_git",
  "apps/api/native/treedb_native"
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1.8.5"
chrono = { version = "0.4", features = ["serde"] }
gix = "0.84.0"
rustler = { version = "0.38.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
