[workspace]
resolver = "2"
members = [
  "crates/treedb_store",
  "crates/treedb_git",
  "crates/treedb_graph",
  "apps/api/native/treedb_native"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1.8.5"
chrono = { version = "0.4", features = ["serde"] }
gix = { version = "0.84.0", features = ["tree-editor"] }
regex = "1"
rustler = { version = "0.38.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
