[package]
name = "treedb_store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
base64.workspace = true
tempfile.workspace = true
