[package]
name = "treedb_native"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "treedb_native"
crate-type = ["cdylib"]

[dependencies]
base64.workspace = true
chrono.workspace = true
rustler.workspace = true
serde.workspace = true
serde_json.workspace = true
treedb_git = { path = "../../../../crates/treedb_git" }
treedb_graph = { path = "../../../../crates/treedb_graph" }
treedb_store = { path = "../../../../crates/treedb_store" }
