[package]
name = "treedx_native"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "treedx_native"
crate-type = ["cdylib"]

[dependencies]
base64.workspace = true
chrono.workspace = true
rustler.workspace = true
serde.workspace = true
serde_json.workspace = true
treedx_git = { path = "../../../../crates/treedx_git" }
treedx_graph = { path = "../../../../crates/treedx_graph" }
treedx_store = { path = "../../../../crates/treedx_store" }
